fix(ui/theme): adjust icon input vertical alignment in light theme
- Same as dark theme: update  to  to correct icon placement in inputs.

--- a/packages/desktop-client/src/renderer/public/themes/lara-light-indigo/theme.css
+++ b/packages/desktop-client/src/renderer/public/themes/lara-light-indigo/theme.css
@@ -1414,8 +1414,7 @@
   }
   .p-icon-field > .p-input-icon {
     position: absolute;
-    top: 50%;
-    margin-top: -0.5rem;
+    top: 25%;
   }
   .p-fluid .p-icon-field-left,
   .p-fluid .p-icon-field-right {
